--- a/hiddenleafmob/package.json
+++ b/hiddenleafmob/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^8.4.5",
+    "@react-native-firebase/messaging": "^7.9.0",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
